@@ -4428,6 +4428,8 @@
 
 /(?R-:(?</
 
+/(?R-:(?<)/
+
 /(?(?C{\Q})(?!(?'/
 
 /(?(?C{\Q})(?!(?'abc')))/I
